# claw-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/clawid/: __init__.py  __main__.py  client.py  verify.py  verify_receipts.py
src/clawid_sdk/: __init__.py  __main__.py  client.py  verify.py  verify_receipts.py
tests/: test_verify.py  test_verify_receipts.py
